Remove Sidebar component and fix spacing for 'content' variable

--- a/styles/volt/layout/_sidenav.scss
+++ b/styles/volt/layout/_sidenav.scss
@@ -219,12 +219,12 @@
 .content {
 
 	overflow: visible;
-	padding: 0 $spacer 0 $spacer;
+	padding: 0 $spacer * 2 0 $spacer * 2;
 	@include transition(all .3s);
 
-	@include media-breakpoint-up(md) {
-		margin-left: 260px;
-	}
+	// @include media-breakpoint-up(md) {
+	// 	margin-left: 260px;
+	// }
 }
 
 .sidebar-toggle {
